without folium call

--- a/2-6/2-6 Intro to Folium_solutions.ipynb
+++ b/2-6/2-6 Intro to Folium_solutions.ipynb
@@ -8,11 +8,11 @@
    },
    "outputs": [],
    "source": [
-    "#from datascience import *\n",
+    "from datascience import *\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import folium\n",
+    "#import folium\n",
     "import json\n",
     "import os"
    ]
