--- a/3-1/3-1_preprocessing_text_student_version.ipynb
+++ b/3-1/3-1_preprocessing_text_student_version.ipynb
@@ -27,7 +27,8 @@
     "\n",
     "2 - [Stemming](#section 2)<br>\n",
     "\n",
-    "3 - [Chunking](#section 3)<br>\n"
+    "3 - [Chunking](#section 3)<br>\n",
+    "\n"
    ]
   },
   {
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,77 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>session</th>\n",
-       "      <th>year</th>\n",
-       "      <th>country</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>44</td>\n",
-       "      <td>1989</td>\n",
-       "      <td>MDV</td>\n",
-       "      <td>﻿It is indeed a pleasure for me and the member...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>44</td>\n",
-       "      <td>1989</td>\n",
-       "      <td>FIN</td>\n",
-       "      <td>﻿\\nMay I begin by congratulating you. Sir, on ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>44</td>\n",
-       "      <td>1989</td>\n",
-       "      <td>NER</td>\n",
-       "      <td>﻿\\nMr. President, it is a particular pleasure ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>44</td>\n",
-       "      <td>1989</td>\n",
-       "      <td>URY</td>\n",
-       "      <td>﻿\\nDuring the debate at the fortieth session o...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>44</td>\n",
-       "      <td>1989</td>\n",
-       "      <td>ZWE</td>\n",
-       "      <td>﻿I should like at the outset to express my del...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   session  year country                                               text\n",
-       "0       44  1989     MDV  ﻿It is indeed a pleasure for me and the member...\n",
-       "1       44  1989     FIN  ﻿\\nMay I begin by congratulating you. Sir, on ...\n",
-       "2       44  1989     NER  ﻿\\nMr. President, it is a particular pleasure ...\n",
-       "3       44  1989     URY  ﻿\\nDuring the debate at the fortieth session o...\n",
-       "4       44  1989     ZWE  ﻿I should like at the outset to express my del..."
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.head()"
    ]
@@ -197,27 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "﻿It is indeed a pleasure for me and the members of my delegation to extend to Ambassador Garba our sincere congratulations on his election to the presidency of the forty-fourth session of the General Assembly\n",
-      "\n",
-      " His election to this high office is a well-deserved tribute to his personal qualities and experience\n",
-      "\n",
-      " I am fully confident that under his able and wise leadership the Assembly will further consolidate the gains achieved during the past year\n",
-      "\n",
-      "\n",
-      "My delegation associates itself with previous speakers in expressing its appreciation of the dedicated efforts of his predecessor, His Excellency Mr\n",
-      "\n",
-      " Dante Caputo, for the exemplary manner in which he discharged his duties as President of the forty-third session of the General Assembly\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using the split function to create tokens\n",
     "paragraph = data['text'][0]\n",
@@ -235,20 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['What', 'kind', 'of', 'patterns', 'do', 'you', 'see', 'in', 'this', 'graph?']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sentence = \"What kind of patterns do you see in this graph?\"\n",
     "tokens = ...\n",
@@ -278,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -291,22 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[\"\\ufeffI should like at the outset to express my delegation's satisfaction and pleasure at your election, Sir, to the presidency of the General Assembly at its forty-fourth session.\",\n",
-       " 'The unanimity of that decision reflects not only your own distinguished record as Foreign Minister and Permanent Representative of your country to the United Nations but also the prestige of your country, Nigeria, of which all of us in Africa are proud.',\n",
-       " 'The outgoing President of the General Assembly, Mr. Dante Caputo of Argentina, shouldered the responsibility of his office with distinction in a momentous and difficult year.']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create sentence tokens\n",
     "speech = data['text'][4]\n",
@@ -316,32 +207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['At',\n",
-       " 'eight',\n",
-       " \"o'clock\",\n",
-       " 'on',\n",
-       " 'Thursday',\n",
-       " 'morning',\n",
-       " 'Arthur',\n",
-       " 'did',\n",
-       " \"n't\",\n",
-       " 'feel',\n",
-       " 'very',\n",
-       " 'good',\n",
-       " '.']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s4 = \"At eight o'clock on Thursday morning Arthur didn't feel very good.\"\n",
     "nltk.word_tokenize(s4)"
@@ -363,29 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('the', 401),\n",
-       " ('of', 213),\n",
-       " (',', 180),\n",
-       " ('to', 177),\n",
-       " ('.', 175),\n",
-       " ('and', 139),\n",
-       " ('in', 106),\n",
-       " ('that', 88),\n",
-       " ('a', 70),\n",
-       " ('is', 63)]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Find the 10 most common tokens\n",
     "tokens = nltk.word_tokenize(speech)\n",
@@ -424,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -449,29 +297,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('We', 43),\n",
-       " ('The', 35),\n",
-       " ('international', 29),\n",
-       " ('Nations', 24),\n",
-       " ('United', 23),\n",
-       " ('countries', 22),\n",
-       " ('Africa', 19),\n",
-       " ('peace', 18),\n",
-       " ('Assembly', 18),\n",
-       " ('African', 17)]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# nltk.download('stopwords')\n",
     "tokens_reduced = ...\n",
@@ -495,25 +323,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('like', 'IN'),\n",
-       " ('at', 'IN'),\n",
-       " ('the', 'DT'),\n",
-       " ('outset', 'NN'),\n",
-       " ('to', 'TO'),\n",
-       " ('express', 'VB')]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# nltk.download('averaged_perceptron_tagger')\n",
     "tagged = nltk.pos_tag(tokens[2:8])\n",
@@ -540,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -558,60 +370,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'run'"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "snowball.stem('running')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'eat'"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "snowball.stem('eats')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'embarass'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "snowball.stem('embarassed')"
    ]
@@ -625,20 +404,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('cylind', 'cylindr')"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "snowball.stem('cylinder'), snowball.stem('cylindrical')"
    ]
@@ -652,20 +420,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('vacat', 'vacat')"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "snowball.stem('vacation'), snowball.stem('vacate')"
    ]
@@ -713,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -731,56 +488,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(S\n",
-      "  (NP H/NNP i/NN)\n",
-      "  s/VBP\n",
-      "  (NP  /JJ e/NN l/NN e/NN)\n",
-      "  c/VBP\n",
-      "  (NP t/NN i/NN)\n",
-      "  o/VBP\n",
-      "  (NP n/JJ  /NNP t/NN o/NN  /NNP t/NN h/NN)\n",
-      "  i/JJ\n",
-      "  s/VBP\n",
-      "  (NP  /JJ h/NN i/NN)\n",
-      "  g/VBP\n",
-      "  (NP h/NN  /NNP)\n",
-      "  o/VBZ\n",
-      "  (NP f/JJ f/NN i/NN)\n",
-      "  c/VBP\n",
-      "  (NP e/NN  /NN i/NN)\n",
-      "  s/VBP\n",
-      "   /PDT\n",
-      "  (NP a/DT  /JJ w/NN e/NN l/NN)\n",
-      "  l/SYM\n",
-      "  -/:\n",
-      "  (NP d/NN e/NN s/NN e/NN r/NN v/NN e/NN d/NN  /NNP t/NN r/NN i/NN)\n",
-      "  b/VBP\n",
-      "  (NP u/JJ t/NN e/NN  /NNP t/NN o/NN  /NNP h/NN i/NN)\n",
-      "  s/VBP\n",
-      "  (NP  /JJ p/NN e/NN r/NN s/NN o/NN)\n",
-      "  n/IN\n",
-      "  (NP a/DT l/NN  /NNP q/NN)\n",
-      "  u/VBD\n",
-      "  (NP a/DT l/NN i/NN)\n",
-      "  t/VBP\n",
-      "  (NP i/NN)\n",
-      "  e/VBP\n",
-      "  s/JJ\n",
-      "   /FW\n",
-      "  (NP a/DT n/JJ d/NN  /NNP e/NN x/NNP p/NN e/NN r/NN i/NN)\n",
-      "  e/VBP\n",
-      "  (NP n/JJ c/NN e/NN)\n",
-      "  ./.)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk import RegexpParser\n",
     "\n",
@@ -801,20 +511,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "nltk.tree.Tree"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(sent_chunked)"
    ]
@@ -830,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -864,21 +563,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-6137cde4893c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.head()"
    ]
@@ -886,7 +573,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def does_it_all():\n",
