--- a/3-6/3-6 Intro to Text Analysis-Students copy.ipynb
+++ b/3-6/3-6 Intro to Text Analysis-Students copy.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "## retrieve our data\n",
-    "data = Table.read_table(..., index_col=0)\n",
+    "data = Table.read_table('data/un-debates-2001-clean.csv', index_col=0)\n",
     "data.show(5)"
    ]
   },
